# ssmproxy-eval

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
configs/: default.yaml
scripts/: check_pop909_subset.py  check_pop909_timesig_tempo_windows.py  diagnose_lag_tail_bias.py  estimate_maestro_tempos.py  estimate_maestro_tempos_v2.py  list_all_constant_tempo.py  maestro_scan_all.py  pickup_hierarchical_debug.py  pickup_random_novelty.py  pop909_scan_all.py  pop909_select.py  select_and_copy.py  select_pop909_constant.py  verify_midi_metadata.py  verify_pop909_raw.py
src/pretty_midi/: __init__.py
src/ssmproxy/: bar_features.py  cli.py  config.py  lag.py  metrics.py  midi_io.py  novelty.py  pipeline.py  plots.py  report.py  toy_generator.py
src/typer/: __init__.py
src/yaml/: __init__.py
ssmproxy/: __init__.py  bar_features.py  cli.py  config.py  dataset_utils.py  lag.py  metrics.py  midi_io.py  novelty.py  pipeline.py  report.py  ssm.py  toy_generator.py
tests/: test_bar_features.py  test_best_lag_support_bias.py  test_best_lag_tail_bias.py  test_cli_consistency.py  test_config_weights.py  test_dataset_utils.py  test_density.py  test_deterministic_metrics_order.py  test_diagnose_lag_tail_bias_smoke.py  test_e2e_eval_dir.py  test_e2e_report_run.py  test_feature_enhancement.py  test_hierarchy_auto_missing.py  test_import.py  test_l0_estimation.py  test_l0_prefer_small.py  test_lag.py  test_lag_auto_hierarchy.py  test_lag_metrics.py  test_logging_bug.py  test_multiscale_peaks_consensus.py  test_no_bidi_unicode.py  test_novelty.py  test_novelty_edge.py  test_novelty_multiscale.py  test_pickup_hierarchical_debug.py  test_pickup_random_novelty.py  test_pipeline_cli.py  test_robustness.py  test_robustness_v2.py  test_robustness_v4.py  test_speed_observability.py  test_ssm.py  test_ssm_numerical_stability.py  test_sync_bars.py  test_toy_generator.py  test_toy_generator_96bars.py  test_toy_hierarchical_v2_structure.py
