[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ssmproxy"
version = "0.1.0"
description = "Skeleton for the ssmproxy evaluation toolkit"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "OpenAI Eval" }]
requires-python = ">=3.9"
dependencies = [
  "typer>=0.12",
  "PyYAML>=6.0",
  "numpy>=1.26",
  "scipy>=1.11",
]

[project.optional-dependencies]
test = [
  "pytest>=8",
]

[project.scripts]
ssmproxy = "ssmproxy.cli:app"


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
