[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ssmproxy"
version = "0.1.0"
description = "Skeleton for the ssmproxy evaluation toolkit"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "OpenAI Eval" }]
requires-python = ">=3.9"
dependencies = [
    "pretty_midi>=0.2.10",
    "mido>=1.3.0",
    "typer>=0.12.0",
    "PyYAML>=6.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.66.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
ssmproxy = "ssmproxy.cli:app"


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
